# physics-playground

./: .cursorrules  .gitignore  CMakeLists.txt  Makefile  installer.iss
.cursor/rules/: .cursorrules
assets/: resources.rc
assets/icons/: icon.icns
docs/: AI_USAGE.md  ARCHITECTURE.md  LEARNING_OUTCOMES.md
platform/macos/: Info.plist.in
platform/windows/: resources.rc
src/: main.cpp
src/core/: Application.cpp  EventHandler.cpp  EventHandler.h  Settings.h  SimulationState.h
src/entities/: Mass.cpp  Mass.h
src/scene/: Gravity.cpp  Gravity.h
src/ui/: Sidebar.cpp  Sidebar.h
